--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
-
     implementation 'androidx.camera:camera-lifecycle:1.1.0-alpha04'
     implementation 'androidx.camera:camera-camera2:1.1.0-alpha04'
     implementation 'androidx.camera:camera-view:1.0.0-alpha24'
@@ -85,4 +83,7 @@ dependencies {
     implementation "androidx.camera:camera-extensions:1.0.0-alpha31"
 
     implementation "com.google.guava:guava:31.0-android"
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
 }
