--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,13 +86,19 @@ dependencies {
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
-    // MediaPipe solution-core is the foundation of any MediaPipe Solutions.
-    implementation 'com.google.mediapipe:solution-core:latest.release'
-    // Optional: MediaPipe Face Detection Solution.
-    implementation 'com.google.mediapipe:facedetection:latest.release'
-    // Optional: MediaPipe Face Mesh Solution.
-    implementation 'com.google.mediapipe:facemesh:latest.release'
-    // Optional: MediaPipe Hands Solution.
-    implementation 'com.google.mediapipe:hands:latest.release'
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation 'com.google.flogger:flogger:latest.release'
+    implementation 'com.google.flogger:flogger-system-backend:latest.release'
+    implementation 'com.google.code.findbugs:jsr305:latest.release'
+    implementation 'com.google.guava:guava:27.0.1-android'
+    implementation 'com.google.protobuf:protobuf-javalite:3.19.1'
+
+    def auto_value_version = "1.8.1"
+    implementation "com.google.auto.value:auto-value-annotations:$auto_value_version"
+    annotationProcessor "com.google.auto.value:auto-value:$auto_value_version"
 
 }
