--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.google.protobuf:protobuf-javalite:3.19.1'
 
+    implementation 'com.sun.mail:android-mail:1.6.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+
     def auto_value_version = "1.8.1"
     implementation "com.google.auto.value:auto-value-annotations:$auto_value_version"
     annotationProcessor "com.google.auto.value:auto-value:$auto_value_version"
