--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    packagingOptions {
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
 }
 
 allprojects {
@@ -100,6 +104,9 @@ dependencies {
 
     implementation 'com.sun.mail:android-mail:1.6.4'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.6'
 
     def auto_value_version = "1.8.1"
     implementation "com.google.auto.value:auto-value-annotations:$auto_value_version"
