--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ASLRecorder"
         android:requestLegacyExternalStorage="true">
-        <activity android:name=".splash.SplashScreenActivity">
+        <activity android:exported="true" android:name=".splash.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
