--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -39,7 +39,6 @@ android {
             excludes += ['META-INF/NOTICE.md', 'META-INF/LICENSE.md']
         }
     }
-    namespace 'edu.gatech.ccg.aslrecorder'
 }
 
 allprojects {
@@ -54,6 +53,11 @@ apply plugin: 'kotlin-kapt'
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation 'com.mbientlab:metawear:4.0.0'
+    implementation 'com.mbientlab.bletoolbox:scanner:0.3.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'no.nordicsemi.android:dfu:2.3.0'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
