--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="edu.gatech.ccg.aslrecorder">
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -17,12 +17,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ASLRecorder"
         android:requestLegacyExternalStorage="true">
-        <activity android:exported="true" android:name=".splash.SplashScreenActivity">
+
+        <service android:name="com.mbientlab.metawear.android.BtleService" />
+        <service android:name=".wrist_sensor.DfuService" />
+
+        <activity android:exported="true" android:name=".wrist_sensor.ScannerActivity" android:label="@string/app_name" >>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+
+        <activity android:exported="true" android:name=".splash.SplashScreenActivity" android:parentActivityName=".wrist_sensor.ScannerActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity android:name=".recording.RecordingActivity"
                   android:parentActivityName=".splash.SplashScreenActivity">
