--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
@@ -19,7 +20,7 @@
         android:requestLegacyExternalStorage="true">
 
         <service android:name="com.mbientlab.metawear.android.BtleService" />
-        <service android:name=".wrist_sensor.DfuService" />
+<!--        <service android:name=".wrist_sensor.DfuService" />-->
 
         <activity android:exported="true" android:name=".wrist_sensor.ScannerActivity" android:label="@string/app_name" >>
             <intent-filter>
@@ -47,7 +48,7 @@
         </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.myapp.fileprovider"
+            android:authorities="edu.gatech.ccg.aslrecorder.fileprovider"
             android:grantUriPermissions="true"
             android:exported="false">
             <meta-data
